--- a/jobportal/src/components/About.css
+++ b/jobportal/src/components/About.css
@@ -4,3 +4,13 @@
     font-size: 30px;
     font-weight:bolder ;
 }
+.para-1{
+    text-align: left;
+    font-size:30px;
+    color:red;
+}
+.para-2{
+    text-align: left;
+    font-size :20px;
+    font-family: 'Courier New', Courier, monospace;
+}
