--- a/jobportal/src/components/About.css
+++ b/jobportal/src/components/About.css
@@ -1,16 +1,72 @@
-.Heading{
-    text-align: center;
-    text-decoration: underline dotted  blue;
-    font-size: 30px;
-    font-weight:bolder ;
+*{
+    margin:0px;
+    padding: 0px;
 }
-.para-1{
-    text-align: left;
+
+.section1{
+    padding-top:50px;
+    background: linear-gradient(10deg,blue,white);                   
+    padding-bottom: 50px;
+}
+.span{
+    color:yellow ;
+    padding-left: 10px;
+}
+
+.upperpart{
+    color: white;
+    font-size: 50px;
+    /* padding-top :20px; */
+    margin-bottom: 20px;
+    display:flex;
+    justify-content: center;
+    font-weight: bold;
+}
+.lowerpart{
+    color: white;
+    font-size: 20px;
+    display:flex;   
+    justify-content: center;
+    font-style:normal;
+    font-weight: bold;
+}
+
+/* next section part */
+
+.section2 .outerdiv{
+    margin-top:80px;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 20px;
+}
+
+
+.section2 .outerdiv .inner_left{
+    width:40%;
+    height:absolute;    
+    margin-left: 20px ;
+}
+
+.section2 .outerdiv .inner_left .heading3{
+    margin-bottom:15px ;
     font-size:30px;
-    color:red;
+    font-weight: bold;
 }
-.para-2{
-    text-align: left;
-    font-size :20px;
-    font-family: 'Courier New', Courier, monospace;
+/* para modifying */
+.section2 .outerdiv .inner_left .para{          
+    line-height: 1.5;
+    color:rgb(66, 66, 66);
+}
+/* image modifing */
+.section2 .outerdiv .inner_right .image{
+    border-radius: 6%;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    transition: transform 0.6s cubic-bezier(0.25, 0.8, 0.25, 1), 
+            box-shadow 0.6s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+}
+
+.section2 .outerdiv .inner_right .image:hover{
+    transform: scale(1.04); 
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
 }
