--- a/jobportal/src/components/Navbar.css
+++ b/jobportal/src/components/Navbar.css
@@ -2,12 +2,14 @@
 /* Navbar Container */
 .navbar {
   background: blue;
-  padding: 8px 20px;
+  width: 100%;
+  margin-right: 0px;
+  padding: 8px;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
   position: sticky;
   top: 0;
-  z-index: 100;
-  position: relative;
+  z-index: 1000;
+  
 }
 
 /* Full Navbar Hover Effect Line */
