1. Modify index.jsx and index.css , create herosection.jsx for home background image, create companyslider for logo slide, create image slider in progress.

--- a/jobportal/src/components/Login.css
+++ b/jobportal/src/components/Login.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url("../assets/login-bg.jpg") no-repeat center center/cover;
+  background: url("../assets/loginBg.jpg") no-repeat center center/cover;
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
