--- a/jobportal/src/components/Register.css
+++ b/jobportal/src/components/Register.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url("../assets/login-bg.jpg") no-repeat center center/cover;
+  background: url("../assets/loginBg.jpg") no-repeat center center/cover;
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
