--- a/jobportal/src/components/About.css
+++ b/jobportal/src/components/About.css
@@ -21,6 +21,7 @@
     display:flex;
     justify-content: center;
     font-weight: bold;
+      transition: transform 0.4s ease-in-out, text-shadow 0.4s ease-in-out;
 }
 .lowerpart{
     color: white;
@@ -30,6 +31,13 @@
     font-style:normal;
     font-weight: bold;
 }
+
+.section1 .Heading1 .upperpart:hover{
+   transform: scale(1.2);
+  text-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+}
+
+
 
 /* next section part */
 
@@ -70,3 +78,86 @@
     transform: scale(1.04); 
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
 }
+
+
+/* section3 */
+
+.section3{
+    background-color: rgb(249, 249, 249);
+    padding-top: 40px;
+}
+
+.section3 .heading1 {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+    font-weight: bolder;
+}
+.section3 .paragraph1 {
+    display: flex;
+    justify-content: center;
+    font-family:'Times New Roman', Times, serif;
+    font-weight: normal;
+    color: rgb(88, 88, 88);
+    font-size: 20px;
+}
+
+.section3 .outerdiv1{
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: wrap;
+  gap: 40px;
+  margin-top: 30px;
+margin-left: 10px;
+
+
+}
+
+.section3 .outerdiv1 .innerdiv1{
+   background: #ffffff;
+  padding: 30px 20px;
+  border-radius: 12px;
+  width: 200px;
+  height :auto;
+  text-align: center;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.section3 .outerdiv1 .innerdiv1:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
+
+
+.section3 .outerdiv1 .innerdiv1 h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.section3 .outerdiv1 .innerdiv1 p {
+  font-size: 15px;
+  color: #555;
+  line-height: 1.5;
+}
+
+.section3 .outerdiv1 .innerdiv1  .innerinnerdiv {
+    height:100px;
+    width:100%;
+    background-color: white;
+    display:flex;
+    justify-content: center;
+    border-radius:20px;
+    margin-bottom: 15px;
+    font-size: 70px;
+    color: #2563eb;
+    padding-top: 20px;
+    margin-bottom: 0px;
+}
+
+.section3 .outerdiv1 .innerdiv1  .textpart .textpart_heading {
+        font-size: 30px;
+}
+
