--- a/jobportal/src/components/Navbar.css
+++ b/jobportal/src/components/Navbar.css
@@ -21,7 +21,7 @@
   left: 0;
   width: 100%;
   height: 3px;
-  background: #f1c40f;
+  background: orange;
   transform: scaleX(0);
   transform-origin: bottom right;
   transition: transform 0.4s ease-out;
