--- a/jobportal/src/components/Navbar.css
+++ b/jobportal/src/components/Navbar.css
@@ -3,15 +3,27 @@
 .navbar {
   background: blue;
   width:100%;
+  height: 50px;
   margin-right: 0px;
   padding: 8px;
   padding-bottom: 50px;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  
+
+   
 }
+
+.navbar nav ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;   /* or column if you want */
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  
+  margin: 0;
+  padding: 0;
+}
+
 
 /* Full Navbar Hover Effect Line */
 .navbar::before {
