--- a/jobportal/src/components/Navbar.css
+++ b/jobportal/src/components/Navbar.css
@@ -8,8 +8,8 @@
   padding: 8px;
   padding-bottom: 50px;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
-
-   
+  position: fixed;
+  top:0; 
 }
 
 .navbar nav ul {
