--- a/jobportal/src/components/Navbar.css
+++ b/jobportal/src/components/Navbar.css
@@ -3,10 +3,8 @@
 .navbar {
   background: blue;
   width:100%;
-  height: 70px;
+  height: 100px;
   margin-right: 0px;
-  padding: 8px;
-  padding-bottom: 50px;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.2);
   position: sticky;
   top:0; 
@@ -15,7 +13,7 @@
 .navbar nav ul {
   list-style: none;
   display: flex;
-  flex-direction: row;   /* or column if you want */
+  flex-direction: row;   
   align-items: center;
   justify-content: space-between;
   width: 100%;
@@ -149,8 +147,8 @@
     border: none;
     outline: none;
     cursor: pointer;
-    background-color: #ffffff; 
-    color: #00008b; 
+    background-color: rgb(183, 223, 239);
+    color: white;
 
     /* Shape and spacing */
     border-radius: 5px 5px 5px 5px; 
