--- a/jobportal/src/index.css
+++ b/jobportal/src/index.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 body {
   margin: 0;
   padding: 0;
@@ -80,7 +81,9 @@ body {
   0% {
     transform: translateX(0);
   }
+
   100% {
     transform: translateX(-50%);
   }
 }
+
