--- a/jobportal/src/components/Job.css
+++ b/jobportal/src/components/Job.css
@@ -22,6 +22,8 @@
   border-radius: 8px;
   font-weight: 600;
   transition: all 0.3s ease;
+  display: flex;
+  align-items: end;
 }
 
 .button-create-job:hover {
