--- a/jobportal/src/components/Job.css
+++ b/jobportal/src/components/Job.css
@@ -5,6 +5,15 @@
   min-height: 100vh;
   font-family: "Segoe UI", Tahoma,Verdana, sans-serif;
 }
+/* ================= HEADING ================= */
+.job-title {
+  font-size: 40px;
+  font-weight: 700;
+  color: #222;
+  margin-bottom: 20px;
+  text-align: center;
+  text-decoration: solid underline  #0d6efd;
+}
 
 /* ================= CREATE JOB BUTTON ================= */
 .job-post-create {
@@ -16,15 +25,21 @@
 
 .button-create-job {
   background: linear-gradient(135deg, #0d6efd, #084298);
-  border: none;
   padding: 10px 22px;
-  font-size: 15px;
-  border-radius: 8px;
+  font-size: 20px;
+  border-radius: 20px;
   font-weight: 600;
-  transition: all 0.3s ease;
+  transition: all 1s ease;
   display: flex;
   align-items: end;
 }
+.button-div{
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20px;
+  
+}
+
 
 .button-create-job:hover {
   transform: translateY(-2px);
